--- a/sprint1/app/package.json
+++ b/sprint1/app/package.json
@@ -10,17 +10,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-picker/picker": "2.2.1",
     "expo": "~44.0.0",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-multiple-select": "^0.5.7",
+    "react-native-multiple-select-expo": "^0.4.5",
+    "react-native-sectioned-multi-select": "^0.9.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "prettier": "2.5.1"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "useTabs": true
   },
   "private": true
 }
