--- a/sprint1/app/package.json
+++ b/sprint1/app/package.json
@@ -14,6 +14,8 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-picker/picker": "2.2.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "expo": "~44.0.0",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
@@ -22,6 +24,8 @@
     "react-native": "0.64.3",
     "react-native-multiple-select": "^0.5.7",
     "react-native-multiple-select-expo": "^0.4.5",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-sectioned-multi-select": "^0.9.1",
     "react-native-web": "0.17.1",
     "react-native-weekday-picker": "^0.0.1"
