--- a/sprint1/app/package.json
+++ b/sprint1/app/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-flash-message": "^0.2.1",
+    "react-native-maps": "0.29.4",
     "react-native-multiple-select": "^0.5.7",
     "react-native-multiple-select-expo": "^0.4.5",
     "react-native-safe-area-context": "3.3.2",
