--- a/sprint1/server/package.json
+++ b/sprint1/server/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.11",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "nodemon": "^2.0.15"
