--- a/sprint1/server/package.json
+++ b/sprint1/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "src/server.ts",
   "license": "MIT",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.11",
@@ -10,13 +10,23 @@
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
-    "prettier": "^2.5.1"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.21",
+    "@typescript-eslint/parser": "^5.15.0",
+    "prettier": "^2.5.1",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.2"
   },
   "prettier": {
     "semi": true,
     "useTabs": true
   },
   "scripts": {
-    "test": "nodemon server.js"
+    "test": "nodemon ./src/server.ts",
+    "start": "node ./dist/server.js",
+    "tsc": "tsc",
+    "postinstall": "npm run tsc",
+    "dev": "ts-node-dev --respawn --pretty --transpile-only ./src/server.ts"
   }
 }
